--- a/Hobbies.html
+++ b/Hobbies.html
@@ -9,7 +9,13 @@
     <h3>Hobbies</h3>
     <ol>
       <li>study</li>
-      <li>coding</li>
+        <p>
+          We are never too old to study and learn
+        </p>
+      <li>Coding</li>
+        <p>
+          Learnt computer lesson since primary school. Joined computer club in secondary school and participated in hackathons
+        </p>
     </ol>
   </body>
 </html>
