--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="opening">
       <table cellspacing="20">
         <tr>
-          <td><img src="Vanessa.jpg" width="300" height="200" alt="Profile picture"></td>
+          <td><img src="Vanessa.JPG" width="300" height="200" alt="Profile picture"></td>
           <td><h1>Vanessa Mae</h1>
           <p>She is a noob 😊 and you can check her <a href="https://www.instagram.com/vanessamae02/">Instagram account</a></p>
           <p>She is a <em>student from <strong>Poland.</strong></em></p></td>
