--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <div class="opening">
       <table cellspacing="20">
         <tr>
-          <td><img src="Vanessa.JPG" width="300" height="200" alt="Profile picture"></td>
+          <td><img src="Vanessa.jpg" width="300" height="200" alt="Profile picture"></td>
           <td><h1>Vanessa Mae</h1>
-          <p>She is a noob 😊 and you can check her <a href="https://www.instagram.com/vanessamae02/">Instagram account</a></p>
-          <p>She is a <em>student from <strong>Poland.</strong></em></p></td>
+          <p>She is a junior college student 😊 and you can check her <a href="https://www.instagram.com/vanessamae02/">Instagram account</a></p>
+          <p>She is a <em>student from <strong>Singapore</strong></em> under the ASEAN MOE scholarship.</p></td>
         </tr>
       </table>
     </div>
@@ -40,15 +40,15 @@
       <table cellspacing="10">
         <tr>
           <td>2004-2016</td>
-          <td>Luke Primary</td>
+          <td>Bukit Sion School</td>
           <td>Student</td>
         </tr>
-          <td>2016-2018</td>
-          <td>St. Thomas Sec Sch</td>
+          <td>2017-2019</td>
+          <td>Crescent Girls' School</td>
           <td>Student</td>
         <tr>
-          <td>2018-2021</td>
-          <td>Brighton High School</td>
+          <td>2019-2021</td>
+          <td>Temasek Junior College</td>
           <td>Student</td>
         </tr>
       </table>
@@ -58,7 +58,7 @@
     <div class="profile">
       <img class="profile-pic" src="teenager.png" alt="introduction">
       <h2>Hello.</h2>
-      <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+      <p>Hi I am just a student trying to learn coding and web designing skills. </p>
     </div>
     <hr>
     <div class="skills">
@@ -66,19 +66,19 @@
       <div class="skill-code">
         <img class="coding" src="book.png" alt="coding">
         <h3>Lorem & Ipsum</h3>
-        <p class="coding-description">Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+        <p class="coding-description">Coding is pretty complex but nothing is impossible to be learnt</p>
       </div>
       <div class="skill-cook">
-        <img class="cooking" src="teddy.png" alt="cooking">
-        <h3>Lorem Ipsum Dolor</h3>
-        <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+        <img class="teaching" src="teddy.png" alt="teaching">
+        <h3>Teaching</h3>
+        <p>I like to make use of my skills and teach people. I used to teach my friends and I am also a tutor on the weekends teaching primary school kids</p>
       </div>
     </div>
     <hr>
     <div class="contact-me">
       <h2>Get In Touch</h2>
-      <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-      <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+      <h3>Contact me anytime and I will be glad to know you too..</h3>
+      <p>Introduce your name and background</p>
       <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
     </div>
   </div>
