--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
       <h2>My Skills.</h2>
       <div class="skill-code">
         <img class="coding" src="book.png" alt="coding">
-        <h3>Lorem & Ipsum</h3>
+        <h3>Coding</h3>
         <p class="coding-description">Coding is pretty complex but nothing is impossible to be learnt</p>
       </div>
       <div class="skill-cook">
-        <img class="teaching" src="teddy.png" alt="teaching">
+        <img class="cooking" src="teddy.png" alt="teaching">
         <h3>Teaching</h3>
         <p>I like to make use of my skills and teach people. I used to teach my friends and I am also a tutor on the weekends teaching primary school kids</p>
       </div>
