--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <h3>Education</h3>
       <table cellspacing="10">
         <tr>
-          <td>2004-2016</td>
+          <td style="text-align: center">2004-2016</td>
           <td>Bukit Sion School</td>
           <td>Student</td>
         </tr>
