--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
   <div id="edu">
     <h3>Education</h3>
-      <table cellspacing="10">
+      <table class="edutable" cellspacing="10">
         <tr>
           <td>2004-2016</td>
           <td>Bukit Sion School</td>
